header top banner updated - icons added - alignment corrections

--- a/wp-content/themes/ar-freight/scss/_header.scss
+++ b/wp-content/themes/ar-freight/scss/_header.scss
@@ -42,6 +42,10 @@ header.site-header {
                 justify-content: center;
                 align-items: center;
             }
+            img.email-img{
+                margin-right: 5px;
+                margin-top: -2px;                
+            }
         }
         span{
             font-family: Roboto-Rg;
